[gd_scene load_steps=2 format=3 uid="uid://bubg5pix7uosu"]

[ext_resource type="Script" path="res://scenes/Menu Scenes/TitleScreen.gd" id="1_5mik1"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_5mik1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -68.0
offset_right = 57.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Campaign" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Campaign"

[node name="Arcade" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Arcade Match
"

[node name="Tutorial" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Tutorial"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings
"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit
"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/Arcade" to="." method="_on_arcade_pressed"]
[connection signal="pressed" from="VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
